# kadmin-web

./: Cargo.toml  LICENSE  README.md  flake.nix  justfile
.github/workflows/: ci.yml
